kubernetes/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: sampleapp 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapp
  template:
    metadata:
      labels:
        app: sampleapp
    spec:
      containers:
      - name: sampleapp 
        image: [IMAGE-URL]:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: [IMAGE-PULL-SECRET]
